--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,22 @@
+# Core Dependencies for Portfolio Website
+# ======================================
+
+# Streamlit - Web framework
 streamlit>=1.28.0
-streamlit-toggle-switch>=1.0.2
-Pillow>=9.0.0
+
+# Image processing and optimization
+Pillow>=10.0.0
+
+# HTTP requests
+requests>=2.28.0
+
+# Data handling
+pathlib>=1.0.1
+
+# Performance optimization
+numpy>=1.21.0
+pandas>=1.3.0
+
+# Additional packages
+streamlit-option-menu>=0.3.6  # For enhanced navigation
+streamlit-lottie>=0.0.5       # For animations
